{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 138,
  "lineage": "b6e46580-31ca-9578-f925-aac7d448f305",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-25T03:14:43.647-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pirate-project-374313/global/firewalls/externalssh",
            "log_config": [],
            "name": "externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/pirate-project-374313/global/networks/default",
            "priority": 1000,
            "project": "pirate-project-374313",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pirate-project-374313/global/firewalls/externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "webserverrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-25T03:14:43.727-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pirate-project-374313/global/firewalls/webserver",
            "log_config": [],
            "name": "webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/pirate-project-374313/global/networks/default",
            "priority": 1000,
            "project": "pirate-project-374313",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pirate-project-374313/global/firewalls/webserver",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/pirate-project-374313/global/images/test-na-mugika",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pirate-project-374313/zones/europe-west6-a/disks/test1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/pirate-project-374313/zones/europe-west6-a/instances/test1",
            "instance_id": "1061224033325724107",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "admin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCup3iMko/U03ak10in2QF7gv3ln4xYljiuTWf/HOmniaSE6JRmc6OKLRL6Hkee9xWzv+xl3msoN4nCSpBQEeBMzNh8Sk/wF3hatkKZZ7GFJxE9Alayx5nmSEege+42zEpHV23MVAoXnwO5hJxSM4rcRF+1g1CAMoI/mCP0GKX9Ix/OtH9Jsbw9WJ+lltg1tsslXpZiXmFemDwALrnytbKrp72rPICWL1nmrlYFW0X+3e6NJtmFhAd/7BDaBWtPst2dPbEWVkVhJWZmigikiiqhWC7LWu26jsEXM+qrM1nH4YgyCv+rbVV2dW6zCU2kZJuhk3FAsTR/5w2AwTTSQl/bdwxrv5rqPkiYRNaiE2L52QRdDnvB3X5DNjRuX9+A3lOGxnRkCTSWVC/fG1VRMr4sB4MLQdGHoXHFnSeO+3jwauC [...]
            },
            "metadata_fingerprint": "yjbPg2wy9LE=",
            "name": "test1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.65.101.79",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pirate-project-374313/global/networks/default",
                "network_ip": "10.172.0.39",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pirate-project-374313/regions/europe-west6/subnetworks/default",
                "subnetwork_project": "pirate-project-374313"
              }
            ],
            "project": "pirate-project-374313",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pirate-project-374313/zones/europe-west6-a/instances/test1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "webserver"
            ],
            "tags_fingerprint": "Mh9u1hBHiNA=",
            "zone": "europe-west6-a"
          }
        }
      ]
    }
  ]
}